# contributor

./: .gitignore  Flow chart.drawio  README.md  ROUTES.md
.github/workflows/: tests.yaml
backend/: pyproject.toml
backend/src/: PUBLIC_ROUTES_GUIDE.md  main.py  server.py
backend/src/admin/: middleware.py  routes.py
backend/src/admin_auth/: admin_auth_routes.py  middleware.py  routes.py
backend/src/auth/: auth_routes.py
backend/src/chatbot/: router.py  service.py
backend/src/config/: database.py  logger.py
backend/src/controllers/: resource_controller.py
backend/src/messaging/: __init__.py  connection_manager.py
backend/src/routes/: analytics.py  announcement_routes.py  messaging_routes.py  resource_helper_routes.py  resource_routes.py
backend/src/schemas/: announcement.py  conversation.py  message.py  resource.py  user.py
backend/src/tests/: admin_test.py  resource_test.py  vendor_test.py
backend/src/utils/: email_notifications.py  util_routes.py  utils.py
backend/src/vendor_auth/: auth_middleware.py  auth_routes.py  middleware.py  routes.py  vendor_auth_routes.py  vendor_test.py
frontend/: README.md  app.json  babel.config.js  global.css  mapData.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: _layout.tsx  index.tsx  login.tsx
frontend/components/: Layout.tsx  Map.tsx  MapComponent.tsx  PageLayout.tsx  ResourceModal.tsx  StartupAnimation.tsx
frontend/constants/: resources.tsx
frontend/lib/: .gitignore  api.tsx  env.template.ts  (+3 more)
helpful-docs/: GITHUB.md  MONGODB.md  NATIVEWIND.md  SUPABASE.md
(+21 files in other folders)
