[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "google-auth>=2.41.1",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "supabase>=2.22.0",
    "uvicorn>=0.38.0",
]
